<resources>
    <string name="app_name">linco</string>
    <string name="todo">TODO</string>
    <string name="text1">아직 계정이 없으신가요? 회원가입</string>
    <string name="btn1_login">로그인</string>
    <string name="edit1">아이디</string>
    <string name="edit2">비밀번호</string>
    <string name="todo2">TODO</string>
    <string name="edit3">이름</string>
    <string name="edit4">아이디</string>
    <string name="edit5">비밀번호</string>
    <string name="edit6">비밀번호 확인</string>
    <string name="btn2">가입하기</string>
    <string name="text2">이미 계정이 있으신가요? 로그인</string>
    <string name="text3">관심 키워드를 선택해주세요</string>
    <string name="btn3">캠핑</string>
    <string name="btn4">뷰티</string>
    <string name="btn5">건강</string>
    <string name="btn6">스포츠</string>
    <string name="btn7">인테리어</string>
    <string name="btn8">육아</string>
    <string name="btn9">전자기기</string>
    <string name="btn10">도서</string>
    <string name="btn11">패션</string>
    <string name="btn12">확인</string>
</resources>