<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6D71F9"
    tools:context=".signin.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#6D71F9"
        android:orientation="horizontal"
        android:padding="130dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="850dp"
        android:layout_weight="1"
        android:background="@drawable/layout_round"
        android:orientation="vertical"
        android:paddingTop="70dp"
        android:paddingRight="55dp"
        android:paddingLeft="55dp">

        <EditText
            android:id="@+id/user_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_round"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/edit1"
            android:textColor="#757575"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

        <EditText
            android:id="@+id/user_pw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/edit2"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="40dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:elevation="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/btn1_login"
            android:textColor="#FFFF"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/go_reg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/text1"
            android:textStyle="bold"/>


    </LinearLayout>


</LinearLayout>